Adding confirmation modal when setting the board to public with Editor or Commenter role

--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -401,6 +401,9 @@
   "share-board.publish": "Publish",
   "share-board.share": "Share",
   "shareBoard.channels-select-group": "Channels",
+  "shareBoard.confirm-change-team-role.body": "Everyone on the board that has a lower permission than the \"{role}\" role will <b>now be promoted to be {role}</b>. Are you sure you want to make this board public?",
+  "shareBoard.confirm-change-team-role.confirmBtnText": "Make board public",
+  "shareBoard.confirm-change-team-role.title": "Make board public",
   "shareBoard.confirm-link-channel": "Link board to channel",
   "shareBoard.confirm-link-channel-button": "Link channel",
   "shareBoard.confirm-link-channel-button-with-other-channel": "Unlink and link here",
