--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -401,7 +401,7 @@
   "share-board.publish": "Publish",
   "share-board.share": "Share",
   "shareBoard.channels-select-group": "Channels",
-  "shareBoard.confirm-change-team-role.body": "Change board role",
+  "shareBoard.confirm-change-team-role.body": "Change minimum board role",
   "shareBoard.confirm-change-team-role.confirmBtnText": "Everyone on the board that has a lower permission than the \"{role}\" role will <b>now be promoted to {role}</b>. Are you sure you want to change the minimum role for the board?",
   "shareBoard.confirm-change-team-role.title": "Change minimum board role",
   "shareBoard.confirm-link-channel": "Link board to channel",
