i18n-extract, remove log entries, cleanup

--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -257,6 +257,8 @@
   "SidebarTour.SidebarCategories.Body": "All your boards are now organized under your new sidebar. No more switching between workspaces. One-time custom categories based on your prior workspaces may have automatically been created for you as part of your v7.2 upgrade. These can be removed or edited to your preference.",
   "SidebarTour.SidebarCategories.Link": "Learn more",
   "SidebarTour.SidebarCategories.Title": "Sidebar categories",
+  "SiteStats.total_boards": "Total Boards",
+  "SiteStats.total_cards": "Total Cards",
   "TableComponent.add-icon": "Add icon",
   "TableComponent.name": "Name",
   "TableComponent.plus-new": "+ New",
@@ -396,7 +398,7 @@
   "rhs-boards.no-boards-linked-to-channel": "No boards are linked to {channelName} yet",
   "rhs-boards.no-boards-linked-to-channel-description": "Boards is a project management tool that helps define, organize, track and manage work across teams, using a familiar kanban board view.",
   "rhs-boards.unlink-board": "Unlink board",
-  "rhs-boards.unlink-board1": "Unlink board Hello",
+  "rhs-boards.unlink-board1": "Unlink board",
   "rhs-channel-boards-header.title": "Boards",
   "share-board.publish": "Publish",
   "share-board.share": "Share",
