--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "AppBar.Tooltip": "Toggle Linked Boards",
+  "Attachment.Attachment-title": "Attachment",
   "BoardComponent.add-a-group": "+ Add a group",
   "BoardComponent.delete": "Delete",
   "BoardComponent.hidden-columns": "Hidden columns",
@@ -71,6 +72,7 @@
   "CardBadges.title-checkboxes": "Checkboxes",
   "CardBadges.title-comments": "Comments",
   "CardBadges.title-description": "This card has a description",
+  "CardDetail.Attach": "Attach",
   "CardDetail.Follow": "Follow",
   "CardDetail.Following": "Following",
   "CardDetail.add-content": "Add content",
@@ -92,6 +94,7 @@
   "CardDetailProperty.property-deleted": "Deleted {propertyName} successfully!",
   "CardDetailProperty.property-name-change-subtext": "type from \"{oldPropType}\" to \"{newPropType}\"",
   "CardDetial.limited-link": "Learn more about our plans.",
+  "CardDialog.delete-confirmation-dialog-attachment": "Confirm Attachment delete!",
   "CardDialog.delete-confirmation-dialog-button-text": "Delete",
   "CardDialog.delete-confirmation-dialog-heading": "Confirm card delete!",
   "CardDialog.editing-template": "You're editing a template.",
@@ -350,6 +353,7 @@
   "calendar.today": "TODAY",
   "calendar.week": "Week",
   "cloudMessage.learn-more": "Learn more",
+  "createFileBlock.failed": "Unable to upload the file. File size limit reached.",
   "createImageBlock.failed": "Unable to upload the file. File size limit reached.",
   "default-properties.badges": "Comments and description",
   "default-properties.title": "Title",
@@ -396,7 +400,7 @@
   "rhs-boards.no-boards-linked-to-channel": "No boards are linked to {channelName} yet",
   "rhs-boards.no-boards-linked-to-channel-description": "Boards is a project management tool that helps define, organize, track and manage work across teams, using a familiar kanban board view.",
   "rhs-boards.unlink-board": "Unlink board",
-  "rhs-boards.unlink-board1": "Unlink board Hello",
+  "rhs-boards.unlink-board1": "Unlink board",
   "rhs-channel-boards-header.title": "Boards",
   "share-board.publish": "Publish",
   "share-board.share": "Share",
