Notification on the action: upload and delete

--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -1,6 +1,12 @@
 {
   "AppBar.Tooltip": "Toggle Linked Boards",
   "Attachment.Attachment-title": "Attachment",
+  "AttachmentBlock.DeleteAction": "delete",
+  "AttachmentBlock.addElement": "add {type}",
+  "AttachmentBlock.delete": "Attachment Deleted Successfully.",
+  "AttachmentBlock.failed": "Unable to upload the file. Attachment size limit reached.",
+  "AttachmentBlock.upload": "Attachment uploading.",
+  "AttachmentBlock.uploadSuccess": "Attachment uploaded successfull.",
   "BoardComponent.add-a-group": "+ Add a group",
   "BoardComponent.delete": "Delete",
   "BoardComponent.hidden-columns": "Hidden columns",
@@ -355,7 +361,6 @@
   "calendar.today": "TODAY",
   "calendar.week": "Week",
   "cloudMessage.learn-more": "Learn more",
-  "createFileBlock.failed": "Unable to upload the file. File size limit reached.",
   "createImageBlock.failed": "Unable to upload the file. File size limit reached.",
   "default-properties.badges": "Comments and description",
   "default-properties.title": "Title",
