--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "AppBar.Tooltip": "Toggle Linked Boards",
+  "BlocksEditor.root-input-placeholder": "Add text or type \"/\" for commands",
   "BoardComponent.add-a-group": "+ Add a group",
   "BoardComponent.delete": "Delete",
   "BoardComponent.hidden-columns": "Hidden columns",
@@ -119,6 +120,7 @@
   "ContentBlock.editText": "Edit text...",
   "ContentBlock.image": "image",
   "ContentBlock.insertAbove": "Insert above",
+  "ContentBlock.moveBlock": "move card content",
   "ContentBlock.moveDown": "Move down",
   "ContentBlock.moveUp": "Move up",
   "ContentBlock.text": "text",
