--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -335,8 +335,11 @@
   "ViewTitle.show-description": "show description",
   "ViewTitle.untitled-board": "Untitled board",
   "WelcomePage.Description": "Boards is a project management tool that helps define, organize, track, and manage work across teams using a familiar Kanban board view.",
+  "WelcomePage.Pages.Description": "Pages is a knowledge management tool that helps team collaborate and store documents.",
   "WelcomePage.Explore.Button": "Take a tour",
+  "WelcomePage.Pages.Explore.Button": "Get started",
   "WelcomePage.Heading": "Welcome To Boards",
+  "WelcomePage.Pages.Heading": "Welcome to Pages",
   "WelcomePage.NoThanks.Text": "No thanks, I'll figure it out myself",
   "WelcomePage.StartUsingIt.Text": "Start using it",
   "Workspace.editing-board-template": "You're editing a board template.",
