i18n-extract and linter fixes

--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -7,6 +7,9 @@
   "AttachmentBlock.failed": "Unable to upload the file. Attachment size limit reached.",
   "AttachmentBlock.upload": "Attachment uploading.",
   "AttachmentBlock.uploadSuccess": "Attachment uploaded successfull.",
+  "AttachmentElement.delete-confirmation-dialog-button-text": "Delete",
+  "AttachmentElement.download": "Download",
+  "AttachmentElement.upload-percentage": "Uploading...({uploadPercent}%)",
   "BoardComponent.add-a-group": "+ Add a group",
   "BoardComponent.delete": "Delete",
   "BoardComponent.hidden-columns": "Hidden columns",
@@ -128,6 +131,7 @@
   "ContentBlock.editText": "Edit text...",
   "ContentBlock.image": "image",
   "ContentBlock.insertAbove": "Insert above",
+  "ContentBlock.moveBlock": "move card content",
   "ContentBlock.moveDown": "Move down",
   "ContentBlock.moveUp": "Move up",
   "ContentBlock.text": "text",
