--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -114,7 +114,7 @@
   "Categories.CreateCategoryDialog.UpdateText": "Update",
   "CenterPanel.Login": "Login",
   "CenterPanel.Share": "Share",
-  "ChannelIntro.CreateBoard": "Create a Board",
+  "ChannelIntro.CreateBoard": "Create a board",
   "CloudMessage.cloud-server": "Get your own free cloud server.",
   "ColorOption.selectColor": "Select {color} Color",
   "Comment.delete": "Delete",
