--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -118,6 +118,7 @@
   "ColorOption.selectColor": "Select {color} Color",
   "Comment.delete": "Delete",
   "CommentsList.send": "Send",
+  "ConfirmPerson.empty": "Empty",
   "ConfirmationDialog.cancel-action": "Cancel",
   "ConfirmationDialog.confirm-action": "Confirm",
   "ContentBlock.Delete": "Delete",
@@ -165,6 +166,7 @@
   "FilterByText.placeholder": "filter text",
   "FilterComponent.add-filter": "+ Add filter",
   "FilterComponent.delete": "Delete",
+  "FilterValue.empty": "(empty)",
   "FindBoardsDialog.IntroText": "Search for boards",
   "FindBoardsDialog.NoResultsFor": "No results for \"{searchQuery}\"",
   "FindBoardsDialog.NoResultsSubtext": "Check the spelling or try another search.",
@@ -248,6 +250,8 @@
   "Sidebar.import-archive": "Import archive",
   "Sidebar.invite-users": "Invite users",
   "Sidebar.logout": "Log out",
+  "Sidebar.new-category.badge": "New",
+  "Sidebar.new-category.drag-boards-cta": "Drag boards here...",
   "Sidebar.no-boards-in-category": "No boards inside",
   "Sidebar.product-tour": "Product tour",
   "Sidebar.random-icons": "Random icons",
@@ -257,8 +261,6 @@
   "Sidebar.template-from-board": "New template from board",
   "Sidebar.untitled-board": "(Untitled Board)",
   "Sidebar.untitled-view": "(Untitled View)",
-  "Sidebar.new-category.badge": "New",
-  "Sidebar.new-category.drag-boards-cta": "Drag boards here...",
   "SidebarCategories.BlocksMenu.Move": "Move To...",
   "SidebarCategories.CategoryMenu.CreateNew": "Create New Category",
   "SidebarCategories.CategoryMenu.Delete": "Delete Category",
@@ -367,6 +369,8 @@
   "calendar.month": "Month",
   "calendar.today": "TODAY",
   "calendar.week": "Week",
+  "centerPanel.undefined": "No {propertyName}",
+  "centerPanel.unknown-user": "Unknown user",
   "cloudMessage.learn-more": "Learn more",
   "createImageBlock.failed": "Unable to upload the file. File size limit reached.",
   "default-properties.badges": "Comments and description",
