--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -120,6 +120,7 @@
   "Comment.delete": "Delete",
   "CommentsList.send": "Send",
   "ConfirmPerson.empty": "Empty",
+  "ConfirmPerson.search": "Search...",
   "ConfirmationDialog.cancel-action": "Cancel",
   "ConfirmationDialog.confirm-action": "Confirm",
   "ContentBlock.Delete": "Delete",
@@ -197,6 +198,7 @@
   "OnboardingTour.ShareBoard.Body": "You can share your board internally, within your team, or publish it publicly for visibility outside of your organization.",
   "OnboardingTour.ShareBoard.Title": "Share board",
   "PersonProperty.board-members": "Board members",
+  "PersonProperty.me": "Me",
   "PersonProperty.non-board-members": "Not board members",
   "PropertyMenu.Delete": "Delete",
   "PropertyMenu.changeType": "Change property type",
@@ -287,8 +289,8 @@
   "TableHeaderMenu.insert-right": "Insert right",
   "TableHeaderMenu.sort-ascending": "Sort ascending",
   "TableHeaderMenu.sort-descending": "Sort descending",
+  "TableRow.DuplicateCard": "duplicate card",
   "TableRow.MoreOption": "More actions",
-  "TableRow.delete": "Delete",
   "TableRow.open": "Open",
   "TopBar.give-feedback": "Give feedback",
   "URLProperty.copiedLink": "Copied!",
