--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -444,5 +444,7 @@
   "tutorial_tip.got_it": "Got it",
   "tutorial_tip.ok": "Next",
   "tutorial_tip.out": "Opt out of these tips.",
-  "tutorial_tip.seen": "Seen this before?"
+  "tutorial_tip.seen": "Seen this before?",
+  "statusProperty.configDialog.title": "Edit Statuses",
+  "statusProperty.configDialog.subTitle": "Categorise your status values to represent what each value represents"
 }
