--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -446,5 +446,7 @@
   "tutorial_tip.out": "Opt out of these tips.",
   "tutorial_tip.seen": "Seen this before?",
   "statusProperty.configDialog.title": "Edit Statuses",
-  "statusProperty.configDialog.subTitle": "Categorise your status values to represent what each value represents"
+  "statusProperty.configDialog.subTitle": "Categorise your status values to represent what each value represents",
+  "generic.cancel": "Cancel",
+  "generic.save": "Save"
 }
