--- a/webapp/i18n/en.json
+++ b/webapp/i18n/en.json
@@ -446,7 +446,8 @@
   "tutorial_tip.out": "Opt out of these tips.",
   "tutorial_tip.seen": "Seen this before?",
   "statusProperty.configDialog.title": "Edit Statuses",
-  "statusProperty.configDialog.inProgress.emptyText": "Drag statuses here to consider tasks with these statuses “in progress”",
+  "statusProperty.configDialog.todo.emptyText": "Drag statuses here to consider tasks with these statuses “Not Started”",
+  "statusProperty.configDialog.inProgress.emptyText": "Drag statuses here to consider tasks with these statuses “In Progress”",
   "statusProperty.configDialog.complete.emptyText": "Drag statuses here to consider tasks with these statuses ”Done”",
   "statusProperty.configDialog.subTitle": "Categorise your status values to represent what each value represents",
   "generic.cancel": "Cancel",
