fix: fix translations on Korean

--- a/webapp/i18n/ko.json
+++ b/webapp/i18n/ko.json
@@ -255,7 +255,7 @@
   "Sidebar.delete-board": "보드 삭제",
   "Sidebar.duplicate-board": "보드 복제",
   "Sidebar.export-archive": "아카이브 내보내기",
-  "Sidebar.import": "사이드바 가져요기",
+  "Sidebar.import": "사이드바 가져오기",
   "Sidebar.import-archive": "아카이브 들여오기",
   "Sidebar.invite-users": "사용자 초대",
   "Sidebar.logout": "로그아웃",
